# PhotoEditor-OpenGL

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
res/shaders/: basic.glsl  fragment.glsl  vertex.glsl
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
